# PsSource

./: .gitignore  CMakeLists.txt  ConfigurablePsModel.cc  ConfigurablePsModel.hh  CopyNumberPsSourceEnvironmentProvider.hh  FixedParameterizedPsModel.cc  FixedParameterizedPsModel.hh  FixedPsSourceEnvironmentProvider.hh  LICENSE  OrePowellPsModel.cc  OrePowellPsModel.hh  PositroniumGenerator.cc  PositroniumGenerator.hh  PositroniumProvider.cc  PositroniumProvider.hh  PositroniumTruthInfo.hh  PsPhysicsModel.hh  PsSourceAnnihilationConfig.hh  PsSourceAnnihilationObserver.hh  PsSourceAnnihilationPhysics.cc  PsSourceAnnihilationPhysics.hh  PsSourceAnnihilationProcess.cc  PsSourceAnnihilationProcess.hh  PsSourceEnvironmentProvider.hh  PsSourceTypes.hh  PsTerminalState.hh  PsTerminalStateBuilder.cc  PsTerminalStateBuilder.hh  README.md  TimedEventModel.hh  build_smoke.sh  compare_three_gamma_models.py  export_cross_framework_excel_data.py  export_ore_powell_figure_data.py  main.cc  main_timing.cc  ore_powell_smoke.cc  provider_smoke.cc  ps_pointsource.cc  pybind_wrapper.cc  (+16 more)
cmake/: PsSourceConfig.cmake.in
docs/: PsSource_Integration_Contract.md
implementation_checkpoint/: commands.txt  conda-explicit-spec.txt  environment-from-history.yml  environment.txt  source_checksums.sha256
manuscript_handoff/analytic/: ore_powell_reference_grid.csv  ore_powell_reference_summary.json
manuscript_handoff/cross_framework/: cross_framework_manifest.json  excel_model_summary.csv  excel_ordered_spectra.csv  excel_pairwise_metrics.csv  excel_unordered_spectrum.csv  manuscript_pairwise_summary.csv
manuscript_handoff/geometry/: three_gamma_geometry_histograms.csv  three_gamma_geometry_metrics.csv  three_gamma_geometry_summary.json
manuscript_handoff/polarization/: benchmark_manifest.json  polarized_validation_histograms.csv  polarized_validation_metrics.csv  polarized_validation_summary.json
manuscript_handoff/provenance/: gate_benchmark_manifest.json  gate_conversion_summary.json  gate_geometry_summary.json  gate_ore_powell_summary.json  gate_sif_sha256.txt  native_geant4_benchmark_manifest.json  native_geant4_geometry_summary.json  native_geant4_ore_powell_summary.json  pssource_ore_powell_benchmark_manifest.json  regression_comparison_summary.csv
manuscript_validation_data/: excel_unordered_cdf.csv
ore_powell_figure_data/: expected_density_matrix.csv  observed_density_matrix.csv  opening_angle_spectra.csv  ordered_energy_spectra.csv  phase_space_long.csv  residual_matrix.csv  single_photon_spectrum.csv  validation_summary.csv
paper_runs/: aggregate_errorbars.py  aggregate_fwhm.py  aggregate_pointsource_results.py  aggregate_timing.py  compute_fwhm.py  run_errorbars.sh  run_pointsource_matrix.sh  run_pointsource_replicates.sh  run_timing_matrix.sh
reference/gate_ore_powell/: GateMaterials.db  README.md  container_versions.txt  convert_gate_phase_space.py  gate_ore_powell.mac  gate_sif_inspect.json  run_gate_ore_powell.sh
reference/native_geant4_ore_powell/: README.md  build.sh  native_geant4_ore_powell  native_geant4_ore_powell.cc
